--- a/style.css
+++ b/style.css
@@ -9,13 +9,17 @@ body {
     display: flex;
     max-width: 100vw;
     height: 100vh;
+    flex-direction: column;
 }
 
 .navbar {
     height: 100%;
+    min-height: 50px;
+    min-width: 50px;
     display: flex;
-    flex-direction: column;
     flex-basis: 100px;
+    justify-content: space-between;
+    align-items: center;
     background-color: #005392;
 }
 
@@ -25,7 +29,7 @@ body {
 
 .saved-notes-div {
     background-color: #EBEBEB;
-    flex-basis: 300px;
+    flex-basis: 100vh;
     border-left: 3.5px solid #D3D3D3;
     border-right: 3.5px solid #D3D3D3;
     box-shadow: 0 0 5px 1px #ccc;
@@ -36,43 +40,66 @@ body {
 }
 
 .toolbar-and-editor-container {
-    display: flex;
+    display: none;
     flex-direction: column;
-    /* flex-basis: 100vw; */
+    flex-basis: 100vw;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
     .main {
-        flex-direction: column;
+        flex-direction: row;
     }
 
     .saved-notes-div {
-        flex-basis: 100vh;
+        flex-basis: 300px;
     }
 
     .toolbar-and-editor-container {
-        display: none;
+        display: flex;
+    }
+
+    .navbar {
+        display: block;
+    }
+
+    .nav-list {
+        display: block;
     }
 }
 
-
+/* logo and navbar icons*/
 .logo {
     font-family: 'Playfair Display', serif;
     font-size: 30px;
     color: #fff;
-    text-align: center;
-    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     background-color: #1C354C;
-    padding: 10px 0;
-    margin-bottom: 40px;
+    width: 50px;
+    height: 100%;
 }
 
 .nav-icon {
-    text-align: center;
-    padding-bottom: 10px;
+    display: inline-flex;
+    min-width: 44px;
 }
 
 .nav-icon svg {
     width: 20px;
     fill: #fff;
+}
+
+@media screen and (min-width: 800px) {
+    .logo {
+        width: 100%;
+        height: 50px;
+        margin-bottom: 40px;
+    }
+
+    .nav-icon {
+        display: block;
+        text-align: center;
+        padding-bottom: 10px;
+    }
 }
