--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     min-height: 50px;
     min-width: 50px;
     display: flex;
-    flex-basis: 100px;
+    flex-basis: 50px;
     justify-content: space-between;
     align-items: center;
     background-color: #005392;
@@ -61,10 +61,6 @@ body {
     .navbar {
         display: block;
     }
-
-    .nav-list {
-        display: block;
-    }
 }
 
 /* logo and navbar icons*/
@@ -82,7 +78,7 @@ body {
 
 .nav-icon {
     display: inline-flex;
-    min-width: 44px;
+    min-width: 50px;
 }
 
 .nav-icon svg {
@@ -98,8 +94,8 @@ body {
     }
 
     .nav-icon {
-        display: block;
-        text-align: center;
-        padding-bottom: 10px;
+        flex-direction: column;
+        align-items: center;
+        min-height: 50px;
     }
 }
