--- a/style.css
+++ b/style.css
@@ -1,9 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display:wght@500;700&display=swap');
 
 
-body {
-    margin: 0px;
+/*
+  ==============================================================================
+  Custom styles
+  ==============================================================================
+*/
+/* account for any border and padding in the values you specify 
+for an element's width and height */
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
+
+/* styles the tab navigation links and buttons outline */
+*:focus {
+    outline: thin dotted #E0AD34;
+}
+
+
+/* ======= Hide scrollbar ====== */
+html {
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+    display: none;
+}
+
+/* main variables are used in order to be able to quickly change styles if needed or in case of rebranding */
+:root {
+    /* text color  */
+    --white-txt: #fff;
+    --dark-txt: #1C354C;
+    --blue-txt: #005392;
+    /* background color */
+    --white-bg: #fff;
+    --light-grey-bg: #EBEBEB;
+    --dark-bg: #1C354C;
+    --blue-bg: #005392;
+    /* font */
+    --title-font: 'Playfair Display', serif;
+    --text-font: Montserrat;
+    /*borders*/
+    --notes-border: 3.5px solid #D3D3D3;
+}
+
+/*page layout*/
 
 .main {
     display: flex;
@@ -20,7 +71,7 @@ body {
     flex-basis: 50px;
     justify-content: space-between;
     align-items: center;
-    background-color: #005392;
+    background-color: var(--blue-bg);
 }
 
 .nav-list {
@@ -28,10 +79,10 @@ body {
 }
 
 .saved-notes-div {
-    background-color: #EBEBEB;
+    background-color: var(--light-grey-bg);
     flex-basis: 100vh;
-    border-left: 3.5px solid #D3D3D3;
-    border-right: 3.5px solid #D3D3D3;
+    border-left: var(--notes-border);
+    border-right: var(--notes-border);
     box-shadow: 0 0 5px 1px #ccc;
 }
 
@@ -45,6 +96,55 @@ body {
     flex-basis: 100vw;
 }
 
+/* logo and navbar icons*/
+.logo {
+    font-family: 'Playfair Display', serif;
+    font-size: 30px;
+    color: var(--white-txt);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--dark-bg);
+    width: 50px;
+    height: 100%;
+}
+
+.nav-icon {
+    display: inline-flex;
+    min-width: 50px;
+}
+
+.nav-icon svg {
+    width: 20px;
+    fill: var(--white-txt);
+}
+
+/*typography*/
+h1,
+h2 {
+    font-family: var(--title-font);
+    font-size: 2rem;
+    color: var(--dark-txt);
+}
+
+h2 {
+    font-variant: small-caps;
+}
+
+p {
+    font-family: var(--text-font);
+    color: var(--dark-txt);
+    line-height: 1.8;
+    margin-bottom: 50px;
+}
+
+/*intro section*/
+.intro {
+    width: 90%;
+    margin: 0 auto;
+}
+
+/*large screen version*/
 @media screen and (min-width: 800px) {
     .main {
         flex-direction: row;
@@ -61,29 +161,6 @@ body {
     .navbar {
         display: block;
     }
-}
-
-/* logo and navbar icons*/
-.logo {
-    font-family: 'Playfair Display', serif;
-    font-size: 30px;
-    color: #fff;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #1C354C;
-    width: 50px;
-    height: 100%;
-}
-
-.nav-icon {
-    display: inline-flex;
-    min-width: 50px;
-}
-
-.nav-icon svg {
-    width: 20px;
-    fill: #fff;
 }
 
 @media screen and (min-width: 800px) {
