--- a/style.css
+++ b/style.css
@@ -85,6 +85,9 @@ html::-webkit-scrollbar {
 }
 
 .saved-notes-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--light-grey-bg);
     flex-basis: 100vh;
     border-left: var(--notes-border);
@@ -142,6 +145,10 @@ p {
     color: var(--dark-txt);
     line-height: 1.8;
     margin-bottom: 50px;
+}
+
+.hidden {
+    display: none !important;
 }
 
 /*intro section*/
