--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ html::-webkit-scrollbar {
     flex-direction: column;
     align-items: center;
     background-color: var(--light-grey-bg);
-    flex-basis: 100vh;
     border-left: var(--notes-border);
     border-right: var(--notes-border);
     box-shadow: 0 0 5px 1px #ccc;
@@ -97,12 +96,26 @@ html::-webkit-scrollbar {
 
 .saved-notes-list {
     list-style: none;
+    overflow: auto;
+    min-width: 250px;
+    width: 100%;
+    padding-left: 20px;
 }
 
 .toolbar-and-editor-container {
-    display: none;
+    display: flex;
+    flex-basis: 100vh;
     flex-direction: column;
-    flex-basis: 100vw;
+    position: fixed;
+    top: 50px;
+    left: 0;
+    background-color: var(--white-bg);
+    min-height: 100%;
+    min-width: 100%;
+}
+
+.ql-editor {
+    min-height: 100%;
 }
 
 /* logo and navbar icons*/
@@ -115,7 +128,7 @@ html::-webkit-scrollbar {
     justify-content: center;
     background-color: var(--dark-bg);
     width: 50px;
-    height: 100%;
+    height: 50px;
 }
 
 .nav-icon {
@@ -144,7 +157,6 @@ p {
     font-family: var(--text-font);
     color: var(--dark-txt);
     line-height: 1.8;
-    margin-bottom: 50px;
 }
 
 .hidden {
@@ -157,6 +169,10 @@ p {
     margin: 0 auto;
 }
 
+.intro p {
+    margin-bottom: 50px;
+}
+
 .intro p a {
     color: var(--blue-txt);
     font-weight: bold;
@@ -167,6 +183,7 @@ p {
 @media screen and (min-width: 800px) {
     .main {
         flex-direction: row;
+        height: 100vh;
     }
 
     .saved-notes-div {
@@ -174,11 +191,12 @@ p {
     }
 
     .toolbar-and-editor-container {
-        display: flex;
+        position: static;
     }
 
     .navbar {
-        display: block;
+        display: flex;
+        flex-direction: column;
     }
 }
 
