--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ html::-webkit-scrollbar {
     /*borders*/
     --notes-border: 3.5px solid #D3D3D3;
     --links-border: 2.5px solid #005392;
+    --button-border-dark: 1.5px solid #1C354C;
 }
 
 /*page layout*/
@@ -85,12 +86,13 @@ html::-webkit-scrollbar {
 }
 
 .saved-notes-div {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     background-color: var(--light-grey-bg);
     border-left: var(--notes-border);
     border-right: var(--notes-border);
     box-shadow: 0 0 5px 1px #ccc;
-    padding-left: 20px;
     height: calc(100% - 50px);
     min-width: 250px;
 }
@@ -98,7 +100,7 @@ html::-webkit-scrollbar {
 .saved-notes-list {
     list-style: none;
     overflow: auto;
-    width: 100%;
+    width: 85%;
     height: calc(100% - 50px);
 }
 
@@ -111,11 +113,15 @@ html::-webkit-scrollbar {
     left: 0;
     background-color: var(--white-bg);
     min-height: 100%;
-    min-width: 100%;
+    width: 100%;
 }
 
 .ql-editor {
-    min-height: 100%;
+    flex-basis: 280px;
+}
+
+.save-note-btn {
+    align-self: center;
 }
 
 /* logo and navbar icons*/
@@ -180,12 +186,22 @@ p {
 }
 
 /* buttons */
-.new-note-button {
-    background-color: var(--blue-bg);
-    border: none;
-    color: var(--white-txt);
-    font-family: var(--text-font);
+.dark-blue-btn {
+    border: var(--button-border-dark);
+    background-color: var(--white-bg);
+    color: var(--dark-txt);
+    font-family: var(--title-font);
+    font-size: 1rem;
     border-radius: 5px;
+    margin: 20px 0;
+    padding: 8px;
+}
+
+.dark-blue-btn:active,
+.dark-blue-btn:hover,
+.dark-blue-btn:focus {
+    background-color: var(--dark-bg);
+    color: var(--white-txt);
 }
 
 /*large screen version*/
@@ -202,7 +218,6 @@ p {
 
     .toolbar-and-editor-container {
         position: static;
-        width: auto;
     }
 
     .navbar {
