--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a {
 
 
 /* ======= Hide scrollbar ====== */
-html {
+* {
     /* Hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none;
     /* IE and Edge */
@@ -37,7 +37,7 @@ html {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-html::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
 
@@ -56,7 +56,7 @@ html::-webkit-scrollbar {
     --title-font: 'Playfair Display', serif;
     --text-font: Montserrat;
     /*borders*/
-    --notes-border: 3.5px solid #D3D3D3;
+    --notes-border: 2.5px solid #D3D3D3;
     --links-border: 2.5px solid #005392;
     --button-border-dark: 1.5px solid #1C354C;
 }
@@ -173,6 +173,7 @@ p {
 .intro {
     width: 90%;
     margin: 0 auto;
+    overflow: auto;
 }
 
 .intro p {
@@ -204,6 +205,27 @@ p {
     color: var(--white-txt);
 }
 
+/* notes */
+.note {
+    border: var(--notes-border);
+    border-radius: 3px;
+    margin-bottom: 20px;
+    font-size: .8rem;
+    font-family: Montserrat;
+    padding: 8px;
+}
+
+.note h1,
+.note h2,
+.note h3,
+.note h4,
+.note h5,
+.note h6 {
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+
 /*large screen version*/
 @media screen and (min-width: 800px) {
     .main {
@@ -223,6 +245,7 @@ p {
     .navbar {
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
     }
 }
 
