--- a/style.css
+++ b/style.css
@@ -139,6 +139,10 @@ a {
     flex-basis: 280px;
 }
 
+.ql-editor:first-child {
+    border: none;
+}
+
 .save-note-btn {
     align-self: center;
 }
@@ -167,7 +171,7 @@ a {
 }
 
 #starred-button.selected svg {
-    fill: gold; 
+    fill: gold;
 }
 
 /*typography*/
@@ -250,6 +254,18 @@ p {
     right: 20px;
 }
 
+.close-btn {
+    text-align: right;
+    padding-right: 10px;
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+.close-btn button {
+    border: none;
+    background-color: var(--white-bg);
+}
+
 /* notes */
 .note {
     border: var(--notes-border);
@@ -297,9 +313,7 @@ p {
         flex-direction: column;
         justify-content: flex-start;
     }
-}
 
-@media screen and (min-width: 800px) {
     .logo {
         width: 100%;
         height: 50px;
