fixed list style in notes save

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ a {
 }
 
 .saved-notes-list {
-    /* list-style: none; */
+    list-style: none;
     overflow: auto;
     height: calc(100% - 50px);
 }
