added padding left to notes so bullets can fit

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ li {
     border-radius: 3px;
     font-size: .8rem;
     font-family: Montserrat;
-    padding: 8px;
+    padding: 5px 5px 5px 25px;
     position: relative;
     width: 85%;
     margin: 0 auto 20px auto;
