resetted some of the code

--- a/style.css
+++ b/style.css
@@ -117,9 +117,8 @@ a {
 }
 
 .saved-notes-list {
-    /* list-style: none; */
+    list-style: none;
     overflow: auto;
-    width: 85%;
     height: calc(100% - 50px);
 }
 
@@ -170,7 +169,7 @@ a {
     fill: var(--white-txt);
 }
 
-#starred-button.selected svg {
+#starred-button.selected svg, #search-button.selected svg {
     fill: gold;
 }
 
@@ -270,11 +269,13 @@ p {
 .note {
     border: var(--notes-border);
     border-radius: 3px;
-    margin-bottom: 20px;
     font-size: .8rem;
     font-family: Montserrat;
     padding: 8px;
     position: relative;
+    width: 85%;
+    margin: 0 auto 20px auto;
+    transition: width .2s;
 }
 
 .note.favorite .favorite-toggle svg {
@@ -291,6 +292,13 @@ p {
     font-weight: 600;
 }
 
+.active-note {
+    background-color: var(--white-bg);
+    border-right: none;
+    border-left: none;
+    width: 100%;
+}
+
 #searchInput {
     margin: 10px;
     padding: 5px;
@@ -301,6 +309,7 @@ p {
     border-radius: 5px;
     letter-spacing: 1px;
 }
+
 
 /*large screen version*/
 @media screen and (min-width: 800px) {
