--- a/style.css
+++ b/style.css
@@ -2,27 +2,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=family=Montserrat&family=Playfair+Display:wght@500;700&display=swap'); */
 
 
-/*ql editor fonts*/
-.ql-font-roboto {
-    font-family: 'Roboto', sans-serif;
-}
-
-.ql-font-sofia {
-    font-family: 'Sofia', cursive;
-}
-
-.ql-font-inconsolata {
-    font-family: 'Inconsolata', monospace;
-}
-
-.ql-font-ubuntu {
-    font-family: 'Ubuntu', sans-serif;
-}
-
-.ql-font-montserrat {
-    font-family: 'Montserrat', sans-serif;
-}
-
 
 /*
   ==============================================================================
@@ -436,7 +415,12 @@ li {
 
     .toolbar-and-editor-container {
         position: static;
-        margin-left: 8%;
+        max-width: 800px;
+    }
+
+    #editor {
+        margin: 0 auto;
+        width: 100%;
         max-width: 550px;
     }
 
