--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ li {
     padding: 5px;
     position: relative;
     width: 85%;
-    margin: 0 auto 20px auto;
+    margin: 0 auto 5px auto;
     transition: width .2s;
 }
 
@@ -340,6 +340,7 @@ li {
 .note h6 {
     font-size: 1.1rem;
     font-weight: 600;
+    margin-top: 0;
 }
 
 .active-note {
@@ -347,6 +348,11 @@ li {
     border-right: none;
     border-left: none;
     width: 100%;
+    right: -10px;
+}
+
+.active-note button {
+    background-color: white;
 }
 
 .note-text {
