--- a/theme.css
+++ b/theme.css
@@ -32,24 +32,6 @@
     --red-links-border: 2.5px solid #920000;
     --red-button-border-dark: 1.5px solid #4c1c1c;
     --red-editor-border: 1px solid #d6baba;
-
-            /* RAINBOW */
-    /* rainbow text color  */
-    --rainbow-dark-txt: ;
-    --rainbow-blue-txt: #920000;
-    /* rainbow background color */
-    --rainbow-dark-bg: #4c1c1c;
-    --rainbow-blue-bg: #920000;
-    --rainbow-blue-bg-active: #b30000;
-    /* rainbow fill color */
-    --rainbow-dark-fill: none;
-    --rainbow-blue-fill: none;
-    /* rainbow borders */
-    --rainbow-notes-border: 2.5px solid #d6baba;
-    --rainbow-links-border: 2.5px solid #920000;
-    --rainbow-button-border-dark: 1.5px solid #4c1c1c;
-    --rainbow-editor-border: 1px solid #d6baba;
-
 }
 
 /* main variables are used in order to be able to quickly change styles if needed or in case of rebranding */
@@ -120,14 +102,12 @@ body.theme-red {
 body.theme-rainbow {
     --dark-bg: none;
     --blue-bg: none;
+    --blue-bg-active: #4357c9f1;
 background-color: #4158D0;
-background-image: linear-gradient(135deg, #4158D0 0%, #C850C0 35%, #FFCC70 73%, #ffffff 100%);
-    
-
-         
+background-image: linear-gradient(135deg, #4158D0 0%, #C850C0 35%, #FFCC70 73%, #ffffff 100%);       
 }
 
-/*
+/* IF WE HAVE TIME TO MAKE DARKMODE
 @media (prefers-color-scheme: dark){
     body.theme-auto{
    
