--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@ a {
     background-size: 35%;
 }
 
+.cogwheel-list-item:hover {
+    background-color: var(--blue-bg-active);
+}
+
 /* styling to make the cogwheel look like the other icons */
 .cogwheel-select {
     max-width: 50px;
@@ -186,11 +190,6 @@ a {
     color: transparent;
     border: none;
     background: transparent;
-}
-
-/* could't make it hover like the buttons with color, this is an other solution */
-.grow:hover { 
-transform: scale(1.3); 
 }
 
 
