--- a/style.css
+++ b/style.css
@@ -138,6 +138,12 @@ a {
     overflow: auto;
 }
 
+/*adding custom picker label*/
+.ql-style .ql-picker-label::before {
+    content: "Custom styles";
+    padding-right: 20px;
+}
+
 /* logo and navbar icons*/
 .logo {
     font-family: 'Playfair Display', serif;
